# adapta-gtk-theme-flatpak

./: .gitignore  Makefile.am  autogen.sh  configure.ac
adapta/: gtk.gresource
adapta-brila/: gtk-dark.css  gtk.css  gtk.gresource
adapta-brila-eta/: gtk-dark.css  gtk.css  gtk.gresource
adapta-eta/: gtk.gresource
adapta-nokto/: gtk.gresource  index.theme
adapta-nokto-eta/: gtk.gresource  index.theme
m4/: adapta-flatpak-option.m4
